# visiomode

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  404.html  CHANGELOG.md  CITATION.cff  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  Vagrantfile  animation-settings.lua  build-environment.yml  build.settings  config.lua  connect.lua  dev-environment.yml  icon.icns  index.html  last-session-summary.lua  main.lua  make-release.sh  menu.lua  mkdocs.yml  objects.inv  package-lock.json  package.json  pylintrc  pyproject.toml  requirements.txt  rpi-client.lua  run.py  setup.cfg  setup.py  sitemap.xml  stand-alone-session-setup.lua  (+6 more)
.github/workflows/: black.yml  build.yml  docs.yml  format.yml  main.yml  pylint.yml  python-publish.yml  release.yml  stale.yml
building-an-arena/: index.html
contributing/: index.html
controller/: .gitignore  setup.py
controller/src/carie_controller/: core.py
data-analysis/: index.html
design-principles/: index.html
docs/: .buildinfo  CNAME  Makefile  about.rst  api.rst  building-an-arena.md  conf.py  data-analysis.md  genindex.html  index.html  index.md  index.rst  installation.rst  modules.html  next-steps.md  objects.inv  py-modindex.html  running-first-experiment.md  search.html  searchindex.js  troubleshooting.md  visiomode.gui.html  visiomode.html  visiomode.rst  visiomode.webapp.html  visiomode.webpanel.html  visiomode.webpanel.rst
docs/_autosummary/: visiomode.config.Config.rst  visiomode.config.rst  visiomode.core.Visiomode.rst  visiomode.core.rotate.rst  visiomode.core.rst  visiomode.devices.Device.rst  visiomode.devices.DeviceError.rst  visiomode.devices.InputDevice.rst  visiomode.devices.OutputDevice.rst  visiomode.devices.check_device_profile.rst  visiomode.devices.get_available_devices.rst  visiomode.devices.get_input_device.rst  visiomode.devices.get_output_profile.rst  visiomode.devices.lever_push.LeverPush.rst  visiomode.devices.lever_push.rst  visiomode.devices.rst  visiomode.devices.touchscreen.Touchscreen.rst  visiomode.devices.touchscreen.rst  visiomode.devices.water_reward.WaterReward.rst  visiomode.devices.water_reward.rst  visiomode.mixins.BaseClassMixin.rst  visiomode.mixins.ProtocolEventsMixin.rst  visiomode.mixins.WebFormMixin.rst  visiomode.mixins.YamlAttributesMixin.rst  visiomode.mixins.rst  visiomode.models.Base.rst  visiomode.models.Response.rst  visiomode.models.Session.rst  visiomode.models.Trial.rst  visiomode.models.rst  visiomode.plugins.load_module.rst  visiomode.plugins.load_modules_dir.rst  visiomode.plugins.rst  visiomode.protocols.InvalidProtocol.rst  visiomode.protocols.Presentation.rst  visiomode.protocols.Protocol.rst  visiomode.protocols.Task.rst  visiomode.protocols.TouchEvent.rst  visiomode.protocols.get_protocol.rst  visiomode.protocols.gonogo.GoNoGo.rst  (+34 more)
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: modules.rst.txt  visiomode.webapp.rst.txt
docs/_static/: documentation_options.js
docs/getting-started/: installation.md
docs/how-to/: index.md
docs/stylesheets/: extra.css
docsrc/: conf.py  index.rst  visiomode.gui.rst  visiomode.rst
etc/: config.yaml
how-to/: index.html
microcontrollers/: watercontrol.ino  waterservo.ino
microcontrollers/leverpush/: leverpush.ino
microcontrollers/mesoscope/: teensy_led_control.ino
microcontrollers/reward/: reward.ino
microcontrollers/watercontrol/: watercontrol.ino
microcontrollers/waterservo/: waterservo.ino
next-steps/: index.html
phone/: .luacheckrc  README.md  config.lua  connect.lua  last-session-summary.lua  menu.lua  saveload.lua  settings.lua  stand-alone-session-setup.lua  task-visuomotor-stage1.lua  task-visuomotor.lua
reference/: index.html
running-first-experiment/: index.html
search/: search_index.json
src/carie_controller/: core.py
src/carie_controller/experiment/: sessions.py
src/rodent_control/: core.py
src/rodent_control/user/: cli_prompts.py
src/visiomode/: __init__.py  config.py  core.py  main.py  mixins.py  models.py  network.py  plugins.py  redis.py
src/visiomode-client/: LICENSE  README.md  build.settings  connect.lua  main.lua  menu.lua  rpi-client.lua  saveload.lua  settings.lua  stim-presentation.lua  stim2-presentation.lua  task-visuomotor.lua
src/visiomode/_models/: Experimenter.py  __init__.py
src/visiomode/database/: CorruptedDatabaseError.py  Database.py  NoMatchingDatabaseError.py  WrongDataTypeError.py  __init__.py
src/visiomode/devices/: __init__.py  debug.py  lever_push.py  touchscreen.py  water_reward.py
src/visiomode/experiment/: sessions.py
src/visiomode/gui/: __init__.py  events.py  main.py
src/visiomode/models/: Animal.py  Response.py  Session.py  Trial.py
src/visiomode/protocols/: __init__.py  gonogo.py  tafc.py  target_only.py
src/visiomode/scripts/: listener.py
src/visiomode/stimuli/: __init__.py  ebbinghaus_circle.py  ebbinghaus_dots.py  grating.py  isoluminant_gray.py  moving_grating.py  solid_colour.py  variable_contrast_grating.py  variable_contrast_moving_grating.py
src/visiomode/tasks/: __init__.py  ebbinghaus.py  ebbinghaus_test.py  gonogo.py  tafc.py  target_only.py
src/visiomode/webapp/: __init__.py  main.py
src/visiomode/webpanel/: __init__.py  api.py  db.py  (+5 more)
stylesheets/: extra.css
tests/: conftest.py  test_api.py  test_config.py  test_hardware.py  test_launch.py  test_messaging.py  test_stimuli.py  test_storage.py  test_webpanel_routes.py
troubleshooting/: index.html
visiomode/: config.py  core.py  devices.py  main.py  messaging.py  mixins.py  models.py  protocols.py  stimuli.py  storage.py
visiomode/devices/: __init__.py  lever_push.py  touchscreen.py  water_reward.py
visiomode/gui/: main.py  protocols.py  stimuli.py
visiomode/protocols/: __init__.py  gonogo.py  single_target.py  tafc.py  target_only.py
visiomode/stimuli/: __init__.py  grating.py  isoluminant_gray.py  moving_grating.py
visiomode/webpanel/: __init__.py  api.py  session.py
(+69 files in other folders)
