[metadata]
name = visiomode
version = 0.0.1

[options]
install_requires =
    Flask
    PyYAML
    pyserial
    numpy
    pygame==2.0.1
    importlib; python_version == "3.7"
package_dir=
    =src
packages=find:
include_package_data = True

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
        visiomode = visiomode:run
