[metadata]
name = visiomode
version = 0.3.0.dev2
description = An open-source platform for touchscreen-based visuomotor tasks in rodents.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = touchscreen, rodent, behaviour, neuroscience
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: Flask
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Medical Science Apps.
    Topic :: Software Development :: Libraries :: pygame
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
platforms = Raspberry Pi OS
license = MIT
author = Constantinos Eleftheriou
author_email = Constantinos.Eleftheriou@ed.ac.uk
url = https://www.visiomode.org

[options]
install_requires =
    Flask
    PyYAML
    pyserial
    numpy
    pygame==2.0.0
    importlib; python_version == "3.7"
package_dir=
    =src
packages=find:
include_package_data = True
python_requires = >=3.7

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
        visiomode = visiomode:run
